# Poc_log_reader

./: .gitignore  CLAUDE.md  Makefile  README.md  TEST.md  TODO.md  logParcer.json  main.py  output.json  pyproject.toml  sco_monitor  solution.txt  test.sh  test_parser.py  tester.py
ncr_monitor/: __init__.py  log_parser.py  log_watcher.py  models.py
src/: get_next_line_bonus.c  get_next_line_utils_bonus.c  info_convert.c  info_extractor.c  log_reader.c  main.c  models.py  monitor_ncr.py  parser.py
src/utils/: header.h
tests/: test_ncr_monitor.py
