[project]
name = "ncr_monitor"
version = "0.1.0"
description = "A Python package to monitor and parse NCR Self-Checkout logs."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "lxml", # For robust XML parsing
    "pydantic", # For structured event models
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ncr", "log-parser", "self-checkout", "monitor"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ncr_monitor*"]

[tool.setuptools.package-data]
"ncr_monitor" = ["py.typed"]